<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/optionbg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:keepScreenOn="true">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/vibrator"
            android:textColor="#ffffff"
            android:textSize="32sp" />

        <ToggleButton
            android:id="@+id/checkBox1"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/clean"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp" >

        <TextView
            android:id="@+id/timeViewer"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/sound"
            android:textColor="#ffffff"
            android:textSize="32sp" />

        <ToggleButton
            android:id="@+id/checkBox2"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/clean"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn1"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/timedelay"
            android:textColor="#ffffff"
            android:textSize="23sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>